‘Go To Next Writer’ visibility improved [fixes #62216768]

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -54,3 +54,14 @@
 #character-id-select {
 	max-width: 20em;
 }
+
+.expose {
+    position:relative;
+}
+
+#overlay {
+    background:rgba(0,0,0,0.3);
+    display:none;
+    width:100%; height:100%;
+    position:absolute; top:0; left:0; z-index:99998;
+}
